# burn

./: .gitignore  NN_SIDEBAR_BUILDER_SPEC.md  PLAN.md  README.md  package-lock.json
backend/: .env.example  .gitignore  README.md  main.py  modal_sandbox_infer_server.py  modal_worker.py  pyproject.toml
backend/client_outputs/: generated_model.py
backend/core/: compute_node_client.py  deployment_registry.py  graph_compiler.py  job_registry.py  job_storage.py  ml_job_registry.py  ml_training_engine.py  remote_training.py  rf_compiler.py  rf_job_registry.py  rf_shape_inference.py  rf_training_engine.py  shape_inference.py  training_engine.py  vlm_architecture.py  vlm_registry.py  vlm_runtime.py  vlm_training_engine.py  weight_extractor.py
backend/datasets/: loader.py  ml_loader.py  ml_registry.py  registry.py  rf_loader.py  rf_registry.py
backend/jetson_worker/: __init__.py  main.py
backend/jetson_worker/core/: __init__.py  training_engine.py
backend/jetson_worker/routers/: __init__.py  training.py
backend/models/: graph_schema.py  ml_schema.py  rf_graph_schema.py  rf_training_config.py  training_config.py
backend/routers/: ai_coach.py  datasets.py  deploy.py  ml_model.py  ml_websocket.py  model.py  rf_datasets.py  rf_model.py  rf_websocket.py  vlm_model.py  vlm_websocket.py  websocket.py
backend/scripts/: use_api.py  watch_training_ws.py
backend/tests/: conftest.py  test_ai_coach_audio.py  test_ai_coach_failover.py  test_api.py  test_datasets_loader.py  test_deploy_api.py  test_deployment_registry.py  test_gpu_node_api.py  test_graph_compiler.py  test_jetson_worker_api.py  test_rf_api.py  test_rf_compiler.py  test_rf_shape_inference.py  test_rf_websocket.py  test_shape_inference.py  test_training_config.py  test_training_engine_modal.py  test_websocket.py
compute_node/: .env.example  README.md  main.py  pyproject.toml  vlm_runtime.py
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/node/: README.md
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/canvas/: SceneManager.tsx  Viewport.tsx
frontend/src/hooks/: useWebSocket.ts  (+3 more)
gpu_node/: __init__.py  bootstrap.py  main.py  pyproject.toml
gpu_node/core/: __init__.py  graph_compiler.py  job_registry.py  shape_inference.py  training_engine.py
gpu_node/datasets/: loader.py
gpu_node/models/: training_config.py
gpu_node/routers/: __init__.py  training.py
(+75 files in other folders)
