[project]
name = "backend"
version = "0.1.0"
description = "MLCanvas backend API and graph compiler"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.0",
    "ipython>=9.6.0",
    "kaggle>=2.0.0",
    "matplotlib>=3.10.7",
    "pydantic>=2.11.0",
    "pygame>=2.6.1",
    "tinygrad>=0.11.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "uvicorn>=0.35.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.4.0",
]
