[project]
name = "gpunode"
version = "0.1.0"
description = "MLCanvas independent GPU worker node"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi>=0.116.0",
    "ipython>=8.12,<9",
    "joblib>=1.5.0",
    "kaggle>=1.6.0, <2.0.0",
    "matplotlib>=3.10.7",
    "numpy>=1.24.0,<2",
    "pandas>=2.3.0",
    "pydantic>=2.11.0",
    "pygame>=2.6.1",
    "scikit-learn>=1.7.0",
    "tinygrad>=0.11.0",
    "torch @ https://developer.download.nvidia.com/compute/redist/jp/v61/pytorch/torch-2.5.0a0+872d972e41.nv24.08.17622132-cp310-cp310-linux_aarch64.whl",
    "uvicorn>=0.35.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.4.0",
]
